# Interpreter_FlightGear

./: README.md  TODO
Interpreter/Commands/: DefineVarCommand.h  IfCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  WhileCommand.h
Interpreter/Expressions/: Mult.cpp
Interpreter/LexerParser/: Parser.h
Interpreter/ServerClient/: DataWriterClient.h
src/: A_star.h  AssignCommand.cpp  AssignCommand.h  Astar.h  BFS.h  BInaryExpression.cpp  BestFirstSearch.cpp  BestFirstSearch.h  BinaryExpression.h  BindingTable.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  ClinetHandler.cpp  Command.h  CommandExpression.cpp  CommandExpression.h  Comparators.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  CustomPriorityQueue.h  DFS.cpp  DFS.h  DataReaderServer.cpp  DataReaderServer.h  DataWriterClient.cpp  DataWriterClient.h  DefineVarCommand.cpp  DefineVarCommand.h  Div.cpp  Div.h  Expression.h  ExpressionsParser.cpp  ExpressionsParser.h  Factory.h  FileCacheManager.cpp  FileCacheManager.h  ISearchable.h  (+55 more)
src/Interpreter/Commands/: AssignCommand.h  Command.h  CommandExpression.h  ConditionParser.cpp  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  WhileCommand.cpp
src/Interpreter/Expressions/: BinaryExpression.cpp  ExpressionsParser.cpp  ExpressionsParser.h  Minus.h  Mult.h  Number.h  Plus.cpp
src/Interpreter/LexerParser/: Lexer.cpp  Lexer.h
src/Interpreter/ServerClient/: DataReaderServer.cpp  DataReaderServer.h  DataWriterClient.cpp
src/Interpreter/Tables/: BindingTable.cpp  BindingTable.h  PathsTable.cpp  SymbolTable.cpp  SymbolTable.h
src/Server Side/Cache/: CacheManager.h  FileCacheManager.h
src/Server Side/Client/: ClientHandler.h  MyClientHandler.h  genClient.h
src/Server Side/Factory/: MatrixFactory.h  StringReverseFactory.h
src/Server Side/Problems/: MatrixMaze.h  StringReverser.h
src/Server Side/Servers/: MyParallelServer.h  MySerialServer.h  Server.h
src/Server Side/Solvers/: Astar.h  BFS.h  BestFirstSearch.h  ISearcher.h  Searcher.h  algorithmSolver.h
src/Server Side/Utils/: Comparators.h  Utils.h
